--- a/WebContent/asset/css/dashboard.css
+++ b/WebContent/asset/css/dashboard.css
@@ -2,6 +2,7 @@
 
 #my_page_box {
 	display: flex;
+	width: 1200px;
 	border: 1px solid lightgray;
 	border-top-width: 0;
 }
@@ -11,7 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
-	width: 220px;
+	width: 240px;
 	font: 24px;
 	font-weight: bolder; 	
 }
@@ -41,7 +42,7 @@
 /* 본문 */
 
 .mem_content {
-	width: 980px;
+	width: 960px;
 	display: flex;
 	flex-direction: column;
 	border: 1px solid lightgray;
@@ -90,7 +91,6 @@ table {
 	border-right: 0px;
 	border-top: 4px solid olive;
 	border-collapse: collapse;
-	text-align: center;
 	font-size: 18px;
 }
 
@@ -100,11 +100,12 @@ th, td {
 }
 
 .little_btn {
-	font-size: 14px;
-	padding: 5px;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 10px;
 	border-style: none;
 	border-radius: 2px;
-	margin: 10px;
+	margin: 5px;
 	background-color: #00c11f;
 	color:white;
 }
