--- a/WebContent/asset/css/common.css
+++ b/WebContent/asset/css/common.css
@@ -10,21 +10,21 @@ html, body {
 	height:100%;
 }
 
-.wrapper {
+body {
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
 }
 
-.wrap_inner {
+.container {
+	flex: 1;
+}
+
+.wrapper {
 	display: block;
 	position: relative;
 	width: 1200px;
 	margin: auto;
-}
-
-.container {
-	flex: 1;
 }
 
 .outer_content, .inner_content  {
