--- a/WebContent/asset/css/item_category.css
+++ b/WebContent/asset/css/item_category.css
@@ -29,14 +29,16 @@
 	width:100%;
 }
 
-.product_list {
-}
-
 .product_list li {
 	margin: 10px;
 	display: flex;
 	border-bottom: 1px solid lightgray;
 }
+
+.product_list:last-child {
+	border-bottom-style: none;
+}
+
 
 .box {
 	padding: 10px;
