--- a/WebContent/asset/css/item_category.css
+++ b/WebContent/asset/css/item_category.css
@@ -23,16 +23,17 @@
 
 .product_table {
 	margin-top: 15px;
-	display: flex;
-	justify-content: space-between;
+	display:block;
 	border:	1px solid lightgray;
 	width:100%;
 }
 
-.product_list li {
+.product_list>li {
 	margin: 10px;
 	display: flex;
+	justify-content: space-around;
 	border-bottom: 1px solid lightgray;
+	
 }
 
 .product_list:last-child {
@@ -45,13 +46,13 @@
 }
 
 .a {
-	flex: 2 1 auto;
+	flex: 1 1 auto;
 }
 
 .b {
-	flex: 5 1 auto;
+	flex: 8 1 auto;
 }
 
 .c {
-	flex: 3 1 auto;
+	flex: 1 1 auto;
 }
